--- a/CompuMaster.IO.TemporaryFile/CompuMaster.IO.TemporaryFile.vbproj
+++ b/CompuMaster.IO.TemporaryFile/CompuMaster.IO.TemporaryFile.vbproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <RootNamespace></RootNamespace>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0;net48</TargetFrameworks>
-    <Version>2024.12.04.100</Version>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Version>2024.12.24.100</Version>
     <Authors>Jochen Wezel</Authors>
     <Company>CompuMaster GmbH</Company>
     <Copyright>2019-2024 CompuMaster GmbH</Copyright>
